--- a/Views/GanttChart/LoadOnDemand.cshtml
+++ b/Views/GanttChart/LoadOnDemand.cshtml
@@ -8,7 +8,7 @@
         <div class="content-wrapper">
             @(Html.EJS().Gantt("DefaultFunctionalities").DataSource(dataManger =>
                 {
-                    dataManger.Url("https://services.syncfusion.com/aspnet/production/api/GanttLoadOnDemand").CrossDomain(true).Adaptor("WebApiAdaptor");
+                    dataManger.Url("https://ej2services.syncfusion.com/production/web-services/api/GanttLoadOnDemand").CrossDomain(true).Adaptor("WebApiAdaptor");
                 })
                 .Height("460px").EnableVirtualization(true).LoadChildOnDemand(false)
                 .TaskFields(ts => ts.Id("taskId").Name("taskName").StartDate("startDate").Progress("progress")
