--- a/Views/RichTextEditor/SmartSuggestion.cshtml
+++ b/Views/RichTextEditor/SmartSuggestion.cshtml
@@ -194,6 +194,7 @@
             rteObj.showEmojiPicker();
         }
         else {
+            mentionObj.hidePopup();
             rteObj.executeCommand('formatBlock', args.itemData.Command);
         }
     }
