--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -412,6 +412,30 @@
                             @RenderSection("Description", required: false)
                         }
                     </div>
+                    <div class="sb-ad-container">
+                        <div class="sb-ad-content-area">
+                            <div class="sb-ad-header">Transform your ASP.NET MVC web apps today with Syncfusion ASP.NET MVC components</div>
+                            <div class="sb-ad-points-div">
+                                <div class="sb-ad-point-div">
+                                    <div class="sb-ad-img-div sb-icons sb-ad-tick"></div>
+                                    <div class="sb-ad-point-text">85+ high-performance and responsive UI components</div>
+                                </div>
+                                <div class="sb-ad-point-div">
+                                    <div class="sb-ad-img-div sb-icons sb-ad-tick"></div>
+                                    <div class="sb-ad-point-text">Dedicated support</div>
+                                </div>
+                                <div class="sb-ad-point-div">
+                                    <div class="sb-ad-img-div sb-icons sb-ad-tick"></div>
+                                    <div class="sb-ad-point-text">Hassle-free licensing</div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="sb-ad-link" href="https://www.syncfusion.com/downloads/aspnetmvc-js2" target="_blank" rel="noopener">
+                            <div class="sb-ad-try-area">
+                                TRY IT FOR FREE
+                            </div>
+                        </a>
+                    </div>
                     <div class="sb-footer">
                         <div class="sb-footer-left">
                             <div class="sb-footer-links">
