--- a/Views/Uploader/DefaultFunctionalities.cshtml
+++ b/Views/Uploader/DefaultFunctionalities.cshtml
@@ -3,7 +3,7 @@
 @section ControlsSection {
     <div class="col-lg-8 control-section">
         <div class="control_wrapper">
-            @Html.EJS().Uploader("UploadFiles").DropArea(".control-fluid").Removing("onFileRemove").AsyncSettings(new Syncfusion.EJ2.Inputs.UploaderAsyncSettings { SaveUrl = @Url.Content("https://services.syncfusion.com/aspnet/production/api/FileUploader/Save"), RemoveUrl = @Url.Content("https://services.syncfusion.com/aspnet/production/api/FileUploader/Remove") }).Render()
+            @Html.EJS().Uploader("UploadFiles").DropArea(".control-fluid").Removing("onFileRemove").AsyncSettings(new Syncfusion.EJ2.Inputs.UploaderAsyncSettings { SaveUrl = @Url.Content("https://ej2services.syncfusion.com/production/web-services/api/FileUploader/Save"), RemoveUrl = @Url.Content("https://ej2services.syncfusion.com/production/web-services/api/FileUploader/Remove") }).Render()
         </div>
     </div>
     <div class="col-lg-4 property-section">
