--- a/Views/Grid/GridOverview.cshtml
+++ b/Views/Grid/GridOverview.cshtml
@@ -1,4 +1,4 @@
-@using Syncfusion.EJ2
+﻿@using Syncfusion.EJ2
 @using Syncfusion.EJ2.DropDowns
 @section ControlsSection{
 
@@ -45,7 +45,7 @@
     </script>
 
     <script type="text/javascript">
-        var hostUrl = 'https://services.syncfusion.com/aspnet/production/';
+        var hostUrl = 'https://ej2services.syncfusion.com/production/web-services/';
         var urlapi = new ej.data.DataManager({
             url: hostUrl + "api/UrlDataSource",
             adaptor: new ej.data.UrlAdaptor()
