--- a/Views/Grid/SortingAPI.cshtml
+++ b/Views/Grid/SortingAPI.cshtml
@@ -90,7 +90,7 @@
 		    <p>
 				Sorting feature enables us to order the data in a particular direction. It can be enabled by setting the <code>AllowSorting</code> as true.
 			</p>
-			<p class="e-grid"> To sort a Grid column simply click the column header. The icons <span class="e-icons e-icon-ascending"></span>(Ascending)
+			<p class="e-grid" style="border:none"> To sort a Grid column simply click the column header. The icons <span class="e-icons e-icon-ascending"></span>(Ascending)
 				and <span class="e-icons e-icon-descending"></span>(Descending) specifies the sort direction of a column.</p>
 			<p>By default, multi-sorting is enabled in Grid, to sort multiple column hold <strong>CTRL</strong> key and click the column
 				header. To clear sort for a column, hold <strong>SHIFT</strong> key and click the column header.</p>
