--- a/Views/MultiSelect/DataBinding.cshtml
+++ b/Views/MultiSelect/DataBinding.cshtml
@@ -15,7 +15,7 @@
                 <h3>Remote Data</h3>
 
                 @Html.EJS().MultiSelect("remote").Placeholder("Select names").SortOrder((string)ViewBag.sort).Query((string)ViewBag.query).DataSource(
-                   obj => obj.Url("https://services.syncfusion.com/aspnet/production/api/Employees").CrossDomain(true).Adaptor("WebApiAdaptor")).Fields(
+                   obj => obj.Url("https://ej2services.syncfusion.com/production/web-services/api/Employees").CrossDomain(true).Adaptor("WebApiAdaptor")).Fields(
                    new MultiSelectFieldSettings { Text = "FirstName", Value = "EmployeeID" }).Value((string[])ViewBag.val).Render()
             </div>
         </div>
