--- a/Views/Breadcrumb/DefaultFunctionalities.cshtml
+++ b/Views/Breadcrumb/DefaultFunctionalities.cshtml
@@ -12,9 +12,9 @@
                     @Html.EJS().Breadcrumb("default").Items(item =>
                     {
                      item.IconCss("e-icons e-home").Url("https://ej2.syncfusion.com/home/aspnetmvc.html").Add();
-                     item.Text("Components").Url("https://ej2.syncfusion.com/aspnetmvc/Grid/GridOverview").Add();
-                     item.Text("Navigations").Url("https://ej2.syncfusion.com/aspnetmvc/Menu/DefaultFunctionalities").Add();
-                     item.Text("Breadcrumb").Url("./DefaultFunctionalities").Add();
+                     item.Text("Components").Url("https://ej2.syncfusion.com/aspnetmvc/grid/gridoverview").Add();
+                     item.Text("Navigations").Url("https://ej2.syncfusion.com/aspnetmvc/menu/defaultfunctionalities").Add();
+                     item.Text("Breadcrumb").Url("./defaultfunctionalities").Add();
                     }).EnableNavigation(false).Render()
                 </div>
             </div>
@@ -46,8 +46,8 @@
                     @Html.EJS().Breadcrumb("activeItem").Items(item =>
                     {
                      item.IconCss("e-icons e-home").Url("https://ej2.syncfusion.com/home/aspnetmvc.html").Add();
-                     item.Text("All Components").Url("https://ej2.syncfusion.com/aspnetmvc/Grid/GridOverview").Add();
-                     item.Text("Breadcrumb").Url("./DefaultFunctionalities").Add();
+                     item.Text("All Components").Url("https://ej2.syncfusion.com/aspnetmvc/grid/gridoverview").Add();
+                     item.Text("Breadcrumb").Url("./defaultfunctionalities").Add();
                     }).EnableNavigation(false).EnableActiveItemNavigation(true).Render()
                 </div>
             </div>
