--- a/Views/Breadcrumb/TemplateAndCustomization.cshtml
+++ b/Views/Breadcrumb/TemplateAndCustomization.cshtml
@@ -30,9 +30,9 @@
                     @Html.EJS().Breadcrumb("specific-item-template").CssClass("e-specific-item-template").ItemTemplate("#specificItemTemplate").Items(item =>
                     {
                      item.Text("Home").Url("https://ej2.syncfusion.com/home/aspnetmvc.html").Add();
-                     item.Text("Components").Url("https://ej2.syncfusion.com/aspnetmvc/Grid/GridOverview").Add();
-                     item.Text("Navigations").Url("https://ej2.syncfusion.com/aspnetmvc/Menu/DefaultFunctionalities").Add();
-                     item.Text("Breadcrumb").Url("./DefaultFunctionalities").Add();
+                     item.Text("Components").Url("https://ej2.syncfusion.com/aspnetmvc/grid/gridoverview").Add();
+                     item.Text("Navigations").Url("https://ej2.syncfusion.com/aspnetmvc/menu/defaultfunctionalities").Add();
+                     item.Text("Breadcrumb").Url("./defaultfunctionalities").Add();
                     }).Render()
                 </div>
             </div>
