--- a/Views/MultiSelect/VirtualScroll.cshtml
+++ b/Views/MultiSelect/VirtualScroll.cshtml
@@ -18,11 +18,9 @@
         </div>
         <div class="control-wrapper">
             <h4>Default Values</h4>
-            @Html.EJS().MultiSelect("default").Mode(VisualMode.Default).Placeholder("e.g. OrderID").DataSource(obj =>
-            obj.Url("https://ej2services.syncfusion.com/production/web-services/api/orders").CrossDomain(true).Adaptor("WebApiAdaptor")).EnableVirtualization(true).AllowFiltering(true).HideSelectedItem(true).ClosePopupOnSelect(true).AllowCustomValue(true).Fields(new MultiSelectFieldSettings
+            @Html.EJS().MultiSelect("default").Mode(VisualMode.Default).Placeholder("e.g. Item 1").DataSource(@Model.RecordList).EnableVirtualization(true).AllowFiltering(true).HideSelectedItem(true).ClosePopupOnSelect(true).AllowCustomValue(true).Fields(new MultiSelectFieldSettings
             {
-            Text = "OrderID",
-            Value = "OrderID"
+             Text = "Text", Value = "ID"
             }).PopupHeight("200px").Value((string[])@Model.val).Render()
         </div>
         <div class="control-wrapper">
