--- a/Views/PivotTable/LiveData.cshtml
+++ b/Views/PivotTable/LiveData.cshtml
@@ -6,7 +6,7 @@
             <meta name="description" content="This example demonstrates the LiveData in ASP.NET MVC Pivot Table control. Explore here for more details."/>
                 }
 @section ControlsSection{
-    <div class="control-section" style="overflow:auto">
+    <div class="control-section">
         <div class="content-wrapper">
             <div style="margin-bottom: 10px">
                 <h4 style="display: inline-block; font-size: 14px; padding-left: 5px">
