--- a/Views/QueryBuilder/DefaultFunctionalities.cshtml
+++ b/Views/QueryBuilder/DefaultFunctionalities.cshtml
@@ -173,6 +173,12 @@
         background: transparent;
         border: none;
     }
+
+    @@media only screen and (max-width: 700px) {
+        .e-query-json-preview .e-json-content {
+            width: 95%;
+        }
+    }
 </style>@*custom code end*@
 <script>
     var content = "";
