--- a/Views/PDF/DigitalSignatureValidation.cshtml
+++ b/Views/PDF/DigitalSignatureValidation.cshtml
@@ -1,7 +1,7 @@
 @model EJ2MVCSampleBrowser.Models.SignatureValidationMesssage
 @section ControlsSection{
     <div class="control-section">
-        @{Html.BeginForm("DigitalSignatureValidation", "PDF", FormMethod.Post);
+        @{Html.BeginForm("digitalsignaturevalidation", "pdf", FormMethod.Post);
             {
                 <div class="tablediv" style="font-size:14px">
                     <text class="rowdiv">
