--- a/Views/PDF/FindPDFCorruption.cshtml
+++ b/Views/PDF/FindPDFCorruption.cshtml
@@ -1,7 +1,7 @@
 @model EJ2MVCSampleBrowser.Models.FindPDFCorruptionMessage
 @section ControlsSection{
     <div class="control-section">
-        @{Html.BeginForm("FindPDFCorruption", "PDF", FormMethod.Post);
+        @{Html.BeginForm("findpdfcorruption", "pdf", FormMethod.Post);
             {
                 <div class="tablediv" style="font-size:14px">
                     <text class="rowdiv">
