--- a/Views/PivotTable/ExternalBinding.cshtml
+++ b/Views/PivotTable/ExternalBinding.cshtml
@@ -4,7 +4,7 @@
                 }
 @section ControlsSection{
 
-    <div class="control-section" style="overflow:auto">
+    <div class="control-section">
         <div class="content-wrapper">
             @Html.EJS().PivotView("pivotview").Width("100%").ShowTooltip(false).Height("300").DataSourceSettings(dataSourceSettings => dataSourceSettings.DataSource((IEnumerable<object>
                 )ViewBag.Data).ExpandAll(true).EnableSorting(true)
