--- a/Views/PivotTable/HeatMap.cshtml
+++ b/Views/PivotTable/HeatMap.cshtml
@@ -201,13 +201,13 @@
     <div id="description">
         <p>
             The Pivot Table provides custom styles for each cell's display with the help of the <a target="_blank"
-            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Grids.Grid.html#Syncfusion_EJ2_Grids_Grid_QueryCellInfo">
+            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Grids.Grid.html#Syncfusion_EJ2_Grids_Grid_QueryCellInfo" aria-label="QueryCellInfo">
             QueryCellInfo</a> event. Using the <a target="_blank" 
-            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Grids.Grid.html#Syncfusion_EJ2_Grids_Grid_QueryCellInfo">
+            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.Grids.Grid.html#Syncfusion_EJ2_Grids_Grid_QueryCellInfo" aria-label="QueryCellInfo">
             QueryCellInfo</a> event in this sample, we are representing the product-specific monthly sales revenue of the 
             goods sold by an online retailer in a year in the form of a heatmap-like appearance. Each pivot table cell was customized
             by calculating the lowest and highest values via the <a target="_blank"
-            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotFieldList.html#Syncfusion_EJ2_PivotView_PivotFieldList_EnginePopulated">
+            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotFieldList.html#Syncfusion_EJ2_PivotView_PivotFieldList_EnginePopulated" aria-label="EnginePopulated">
             EnginePopulated</a> event and applying a color scheme based on their range.
         </p>
     </div>
