--- a/Views/PivotTable/Overview.cshtml
+++ b/Views/PivotTable/Overview.cshtml
@@ -78,7 +78,7 @@
     </div>
     <div class="urllink">
         Source:
-        <a href="https://www.topuniversities.com/university-rankings?utm_source=topnav" target="_blank">QS World
+        <a href="https://www.topuniversities.com/university-rankings?utm_source=topnav" target="_blank" aria-label="QS World">QS World
             University Rankings</a>
     </div>
 </div>
@@ -286,7 +286,7 @@
 @section ActionDescription{
 <div id="action-description">
     <p>This sample provides an overview of <a target="_blank"
-            href="https://www.syncfusion.com/aspnet-mvc-ui-controls/pivot-table">
+            href="https://www.syncfusion.com/aspnet-mvc-ui-controls/pivot-table" aria-label="ASP.NET MVC Pivot Table">
             ASP.NET MVC Pivot Table</a>, which allows you to organize and summarize pivot data in a detailed or abstract
         view and display it as a grid and chart.</p>
 </div>
@@ -298,27 +298,27 @@
         The ASP.NET MVC Pivot Table is a powerful control for organizing and summarizing business data and displaying
         the
         results in a table and chart format. It includes major features such as built-in <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/aggregation/#aggregation">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/aggregation/#aggregation" aria-label="aggregations">
             aggregations</a>, <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/field-list/#field-list">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/field-list/#field-list" aria-label="pivot table field list">
             pivot table field list</a> for report manipulation, Excel-like <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/filtering/#filtering">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/filtering/#filtering" aria-label="filtering">
             filtering</a> and <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/sorting/#sorting">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/sorting/#sorting" aria-label="sorting">
             sorting</a>, <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/editing/#editing">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/editing/#editing" aria-label="editing">
             editing</a>, <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/excel-export/#excel-export">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/excel-export/#excel-export" aria-label="Excel">
             Excel</a> and <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/pdf-export/#pdf-export">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/pdf-export/#pdf-export" aria-label="PDF">
             PDF</a> exporting, and so on, which are used in this demo, as well as a large data source loaded without any
         performance degradation by using <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/virtual-scrolling/#virtual-scrolling">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/virtual-scrolling/#virtual-scrolling" aria-label="virtualization">
             virtualization</a> support.
     </p><br />
     <p>
         More information on the ASP.NET MVC Pivot Table can be found in this <a target="_blank"
-            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/getting-started">
+            href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/getting-started" aria-label="documentation section" >
             documentation section</a>.
     </p>
 </div>
