--- a/Views/PivotTable/Performance.cshtml
+++ b/Views/PivotTable/Performance.cshtml
@@ -7,7 +7,7 @@
             <meta name="description" content="This example demonstrates the Performance in ASP.NET MVC Pivot Table control. Explore here for more details."/>
                 }
 @section ControlsSection{
-    <div class="control-section" style="overflow:auto">
+    <div class="control-section">
         <div id="ddl-control">
             @Html.EJS().DropDownList("performance").DataSource((IEnumerable<object>)ViewBag.performanceOptions).Change("onChange").Placeholder("Select a Data Range").PopupHeight("240px").Index(0).Width("240").Fields(new DropDownListFieldSettings { Text = "text", Value = "value" }).Render()
             <span id="performanceTime">Time Taken: 0 sec</span>
@@ -151,14 +151,14 @@
         <p>
             This sample demonstrates how the pivot table performs when bound with a million rows in a highly optimized manner
             by only displaying rows and columns to the current view port using the <a target="_blank"
-            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotView.html#Syncfusion_EJ2_PivotView_PivotView_EnableVirtualization">
+            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotView.html#Syncfusion_EJ2_PivotView_PivotView_EnableVirtualization" aria-label="EnableVirtualization">
             EnableVirtualization</a> property. By choosing from the dropdown list options, a different number of rows
             can be loaded into the pivot table.
         </p>
         <br />
         <p>
             More information on the virtual scrolling can be found in this <a target="_blank"
-                href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/virtual-scrolling">
+                href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/virtual-scrolling" aria-label="documentation section">
                 documentation section</a>.
         </p> 
     </div>
