--- a/Views/PivotTable/SummaryCustomization.cshtml
+++ b/Views/PivotTable/SummaryCustomization.cshtml
@@ -397,10 +397,10 @@
                 <td style="padding: 4px 0;">: Allows to display the grand totals either at top or bottom of the row and
                     column axes by selecting the appropriate radio button options.
                     To display the grand totals at top, set the property <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_GrandTotalsPosition">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_GrandTotalsPosition" aria-label="GrandTotalsPosition">
                         GrandTotalsPosition</a> as <b>Top</b>. And, to display the grand
                     totals at bottom, set the property <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_GrandTotalsPosition">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_GrandTotalsPosition" aria-label="GrandTotalsPosition">
                         GrandTotalsPosition</a> as <b>Bottom</b>.</td>
             </tr>
             <tr>
@@ -408,13 +408,13 @@
                 <td style="padding: 4px 0;">: Allows to hide grand totals in row, column, or both by selecting the
                     appropriate radio button options. To hide grand totals in both row and column, set the property<a
                         target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowGrandTotals">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowGrandTotals" aria-label="ShowGrandTotals">
                         ShowGrandTotals</a> as <b>false</b>. To hide the row and column
                     grand totals separately,
                     set the property <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowRowGrandTotals">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowRowGrandTotals" aria-label="ShowRowGrandTotals">
                         ShowRowGrandTotals</a> and <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowColumnGrandTotals">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowColumnGrandTotals" aria-label="ShowColumnGrandTotals">
                         ShowColumnGrandTotals</a> as <b>false</b>.</td>
             </tr>
             <tr>
@@ -422,10 +422,10 @@
                 <td style="padding: 4px 0;">: Allows to display the sub-totals at top, bottom, or default position of
                     the row and column axes by selecting the appropriate radio button options.
                     To display the sub-totals at top, set the property <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_SubTotalsPosition">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_SubTotalsPosition" aria-label="SubTotalsPosition">
                         SubTotalsPosition</a> as <b>Top</b>. And, to display the
                     sub-totals at bottom, set the property <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_SubTotalsPosition">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_SubTotalsPosition" aria-label="SubTotalsPosition">
                         SubTotalsPosition</a> as <b>Bottom</b>.</td>
             </tr>
             <tr>
@@ -433,13 +433,13 @@
                 <td style="padding: 4px 0;">: Allows to hide sub-totals in row, column, or both by selecting the
                     appropriate radio button options. To hide sub-totals in both row and column, set the property<a
                         target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowSubTotals">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowSubTotals" aria-label="ShowSubTotals">
                         ShowSubTotals</a> as <b>false</b>. To hide the row and column
                     sub-totals separately,
                     set the property <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowRowSubTotals">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowRowSubTotals" aria-label="ShowRowSubTotals">
                         ShowRowSubTotals</a> and <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowColumnSubTotals">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewDataSourceSettings.html#Syncfusion_EJ2_PivotView_PivotViewDataSourceSettings_ShowColumnSubTotals" aria-label="ShowColumnSubTotals">
                         ShowColumnSubTotals</a> as <b>false</b>.</td>
             </tr>
             <tr>
@@ -447,7 +447,7 @@
                 <td style="padding: 4px 0;">: Allows to hide sub-totals for specific fields in row and column by
                     selecting appropriate fields from the multi-select drop-down.
                     To hide sub-totals for a specific field, set the <a target="_blank"
-                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewRow.html#Syncfusion_EJ2_PivotView_PivotViewRow_ShowSubTotals">
+                        href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotViewRow.html#Syncfusion_EJ2_PivotView_PivotViewRow_ShowSubTotals" aria-label="ShowSubTotals">
                         ShowSubTotals</a> property as <b>false</b> inside the field definition.</td>
             </tr>
         </tbody>
