--- a/Views/PivotTable/VirtualScrolling.cshtml
+++ b/Views/PivotTable/VirtualScrolling.cshtml
@@ -6,7 +6,7 @@
                 }
 @section ControlsSection{
 
-    <div class="control-section" style="overflow:auto">
+    <div class="control-section">
         <div style="margin-bottom:5px">
             @Html.EJS().Button("load-btn").CssClass("e-info").Content("Load 100K Data").IsPrimary(true).Render()
             <span id="popup">
@@ -18,7 +18,7 @@
             @Html.EJS().PivotView("pivotview").Width("860").Height("300").EnableVirtualization(true).DataSourceSettings(dataSourceSettings => dataSourceSettings.ExpandAll(true).EnableSorting(false)
            .FormatSettings(formatsettings => { formatsettings.Name("Price").Format("C0").MaximumSignificantDigits(10).MinimumSignificantDigits(1).UseGrouping(true).Add(); })
                              .Rows(rows => { rows.Name("ProductID").Add(); }).Columns(columns => { columns.Name("Year").Add(); })
-           .Values(values => { values.Name("Price").Caption("Unit Price").Add(); values.Name("Sold").Caption("Unit Sold").Add(); })).GridSettings(new PivotViewGridSettings { ColumnWidth = 140 }).DataBound("onDataBound").Load("onLoad").VirtualScrollSettings(new PivotViewVirtualScrollSettings { AllowSinglePage = true }).Render()
+           .Values(values => { values.Name("Price").Caption("Unit Price").Add(); values.Name("Sold").Caption("Unit Sold").Add(); })).DataBound("onDataBound").VirtualScrollSettings(new PivotViewVirtualScrollSettings { AllowSinglePage = true }).Render()
         </div>
     </div>
 
@@ -125,13 +125,6 @@
             }
         }
 
-        function onLoad() {
-            var pivotObj = document.getElementById('pivotview').ej2_instances[0];
-            if (ej.base.Browser.isDevice) {
-                pivotObj.width = '100%';
-            }
-        }
-
         document.getElementById("load-btn").addEventListener('click', function () {
             var pivotObj = document.getElementById('pivotview').ej2_instances[0];
             show();
@@ -160,7 +153,7 @@
     <div id="description">
         <p>The pivot table provides an optimized way to render rows and columns inside the view-port alone without
             calculating the value of the entire pivot. To enable virtual scrolling, set <a target="_blank"
-            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotView.html#Syncfusion_EJ2_PivotView_PivotView_EnableVirtualization">
+            href="https://help.syncfusion.com/cr/aspnetmvc-js2/Syncfusion.EJ2.PivotView.PivotView.html#Syncfusion_EJ2_PivotView_PivotView_EnableVirtualization" aria-label="EnableVirtualization">
             EnableVirtualization</a> property property to <b>true</b>.
         </p>
         <p>
@@ -172,7 +165,7 @@
         <br />
         <p>
             More information on the virtual scrolling can be found in this <a target="_blank"
-                href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/virtual-scrolling">
+                href="https://ej2.syncfusion.com/aspnetmvc/documentation/pivot-table/virtual-scrolling" aria-label="documentation section">
                 documentation section</a>.
         </p>
     </div>
