--- a/Views/QueryBuilder/Template.cshtml
+++ b/Views/QueryBuilder/Template.cshtml
@@ -677,6 +677,12 @@
         background: transparent;
         border: none;
     }
+
+    @@media only screen and (max-width: 700px) {
+        .e-query-preview .copy-tooltip {
+           display: block !important;
+        }
+    }
 </style>
 @*custom code end*@
 @section Title{
