--- a/Content/uploader/droparea.css
+++ b/Content/uploader/droparea.css
@@ -47,7 +47,9 @@
     .bootstrap-dark #drop a,
     .bootstrap5-dark #drop a,
     .tailwind-dark #drop a,
-    .fluent-dark #drop a {
+    .fluent-dark #drop a,
+    .fluent2-dark #drop a,
+    .fluent2-highcontrast #drop a {
         color: #fff;
     }
     #dropArea {
@@ -113,11 +115,15 @@
         background-color: #6c757d;
     }
 
-    .fluent-dark .dropArea_wrap {
+    .fluent-dark .dropArea_wrap,
+    .fluent2-dark .dropArea_wrap,
+    .fluent2-highcontrast .dropArea_wrap {
         background-color: #212529;
     }
 
     .fluent-dark .e-upload .e-upload-files .e-upload-file-list,
+    .fluent2-dark .e-upload .e-upload-files .e-upload-file-list,
+    .fluent2-highcontrast .e-upload .e-upload-files .e-upload-file-list,
     .fluent .e-upload .e-upload-files .e-upload-file-list {
         border-bottom: 1px solid rgb(68, 76, 84);
     }
