--- a/Content/uploader/formsupport.css
+++ b/Content/uploader/formsupport.css
@@ -25,7 +25,9 @@
         background: #393939;
     }
 
-    .fluent-dark #control_wrapper { 
+    .fluent-dark #control_wrapper,
+    .fluent2-dark #control_wrapper,
+    .fluent2-highcontrast #control_wrapper { 
         background: #212529;
     }
     
