--- a/Views/Badge/Accordion.cshtml
+++ b/Views/Badge/Accordion.cshtml
@@ -55,7 +55,9 @@
         body.bootstrap5 .sample_container.badge-accordion #accordion .e-toggle-icon,
         body.bootstrap5-dark .sample_container.badge-accordion #accordion .e-toggle-icon,
         body.material3 .sample_container.badge-accordion #accordion .e-toggle-icon,
-        body.material3-dark .sample_container.badge-accordion #accordion .e-toggle-icon {
+        body.material3-dark .sample_container.badge-accordion #accordion .e-toggle-icon,
+        body.fluent .sample_container.badge-accordion #accordion .e-toggle-icon,
+        body.fluent-dark .sample_container.badge-accordion #accordion .e-toggle-icon {
             top: 5px;
         }
 
@@ -144,7 +146,9 @@
     .e-bigger.bootstrap5 .sample_container.badge-accordion  #accordion .e-toggle-icon,
     .e-bigger.bootstrap5-dark .sample_container.badge-accordion  #accordion .e-toggle-icon,
     .e-bigger.material3 .sample_container.badge-accordion #accordion .e-toggle-icon,
-    .e-bigger.material3-dark .sample_container.badge-accordion #accordion .e-toggle-icon {
+    .e-bigger.material3-dark .sample_container.badge-accordion #accordion .e-toggle-icon,
+    .e-bigger.fluent .sample_container.badge-accordion #accordion .e-toggle-icon,
+    .e-bigger.fluent-dark .sample_container.badge-accordion #accordion .e-toggle-icon {
         top: 11px;
     }
 
