--- a/Views/Calendar/MonthPicker.cshtml
+++ b/Views/Calendar/MonthPicker.cshtml
@@ -41,6 +41,8 @@
     }
 
     body.fluent-dark #date_label,
+    body.fluent2-dark #date_label,
+    body.fluent2-highcontrast #date_label,
     body.bootstrap5-dark #date_label,
     body.tailwind-dark #date_label,
     body.material-dark #date_label,
