--- a/Views/ComboBox/Template.cshtml
+++ b/Views/ComboBox/Template.cshtml
@@ -49,7 +49,9 @@
             padding: 15px 0 0 16px;
         }
 
-        .fluent-dark .header {
+        .fluent-dark .header,
+        .fluent2-dark .header,
+        .fluent2-highcontrast .header {
             background: #252423;
             color: #2899F5;
         }
