--- a/Views/Dialog/ComponentsDialog.cshtml
+++ b/Views/Dialog/ComponentsDialog.cshtml
@@ -259,7 +259,9 @@
     .tailwind-dark #formId {
         background: #1f2937;
     }
-    .fluent-dark #formId {
+    .fluent-dark #formId,
+    .fluent2-dark #formId,
+    .fluent2-highcontrast #formId {
         background: #111111;
     }
     .material-dark .form-title,
@@ -268,7 +270,9 @@
     .fabric-dark .form-title,
     .tailwind-dark .form-title,
     .bootstrap5-dark .form-title,
-    .fluent-dark .form-title {
+    .fluent-dark .form-title,
+    .fluent2-dark .form-title,
+    .fluent2-highcontrast .form-title {
         color: rgb(249 249 249);
     }
 
