--- a/Views/DocumentEditor/Comments.cshtml
+++ b/Views/DocumentEditor/Comments.cshtml
@@ -33,6 +33,7 @@
             var container = documenteditorElement.ej2_instances[0];
             container.showPropertiesPane = false;
             container.documentEditorSettings.showRuler = true;
+            container.documentEditorSettings.optimizeSfdt = false;
             var mentionData = [
                 { "Name": "Selma Rose", "Eimg": "3", "EmailId": "selma@mycompany.com" },
                 { "Name": "Russo Kay", "Eimg": "8", "EmailId": "russo@mycompany.com" },
