--- a/Views/DropDownList/GroupingAndIcon.cshtml
+++ b/Views/DropDownList/GroupingAndIcon.cshtml
@@ -47,6 +47,8 @@
         .bootstrap-dark .e-list-icon,
         .tailwind-dark .e-list-icon,
         .fluent-dark .e-list-icon,
+        .fluent2-dark .e-list-icon,
+        .fluent2-highcontrast .e-list-icon,
         .highcontrast .e-list-icon {
            color: #fff;
         }
