--- a/Views/ImageEditor/CustomToolbar.cshtml
+++ b/Views/ImageEditor/CustomToolbar.cshtml
@@ -1067,12 +1067,24 @@
         border: none !important;
     }
 
+    .fluent2-dark .customToolbar .e-toolbar .e-toolbar-items.e-tbar-pos .e-toolbar-center,
     .fluent2 .customToolbar .e-toolbar .e-toolbar-items.e-tbar-pos .e-toolbar-center {
-        margin: 0 4px !important; /* stylelint-disable-line declaration-no-important */
+        margin: 0 auto !important; /* stylelint-disable-line declaration-no-important */
     }
 
     .fluent2 .customToolbar .e-toolbar {
-	    border: 1px solid #808080 !important; /* stylelint-disable-line declaration-no-important */
+	    border: 1px solid #80808054 !important; /* stylelint-disable-line declaration-no-important */
+    }
+
+    .fluent2-dark .customToolbar .e-toolbar {
+	    border: 1px solid #ffffff30 !important;
+    }
+
+    .fluent2 .customToolbar #top-toolbar .e-toolbar-center,
+    .fluent2 .customToolbar #bottom-toolbar .e-toolbar-center,
+    .fluent2-dark .customToolbar #top-toolbar .e-toolbar-center,
+    .fluent2-dark .customToolbar #bottom-toolbar .e-toolbar-center{
+        margin: 0 4px !important;
     }
 </style>
 @*custom code end*@
