--- a/Views/MultiColumnComboBox/DefaultFunctionalities.cshtml
+++ b/Views/MultiColumnComboBox/DefaultFunctionalities.cshtml
@@ -4,14 +4,14 @@
     <div class="col-lg-8 control-section">
         <div class="control-wrapper">
             <div style='padding-top:30px;'>
-                @Html.EJS().MultiColumnComboBox("multicolumnDefault").Placeholder("Select the country").DataSource((IEnumerable<object>)ViewBag.dataSource).Fields(new MultiColumnComboBoxFieldSettings
+                @Html.EJS().MultiColumnComboBox("multicolumnDefault").Placeholder("Select the country").ShowClearButton(true).Fields(new MultiColumnComboBoxFieldSettings
                 { Text = "ShipCountry", Value = "OrderID" }).Columns(col =>
                 {
                     col.Field("OrderID").Header("Order ID").Width("110").Add();
                     col.Field("CustomerID").Header("Customer ID").Width("130").Add();
                     col.Field("Freight").Header("Freight").Width("90").Add();
                     col.Field("ShipCountry").Header("Ship Country").Width("140").Add();
-                }).PopupHeight("230px").Change("valueChange").Value("10001").Text("Denmark").ShowClearButton(true).Render()
+                }).PopupHeight("230px").Change("valueChange").Value("1001").Text("France").DataSource(@Model.OrderDetails).Render()
             </div>
         </div>
     </div>
@@ -19,11 +19,11 @@
         <table id="property" title="Properties" style="width: 100%; margin:10px">
             <tr>
                 <td class="left-side">Value</td>
-                <td>:<span id='value' class="right-side">10001</span></td>
+                <td>:<span id='value' class="right-side">1001</span></td>
             </tr>
             <tr>
                 <td class="left-side">Text</td>
-                <td>:<span id='text' class="right-side">Denmark</span></td>
+                <td>:<span id='text' class="right-side">France</span></td>
             </tr>
         </table>
     </div>
