--- a/Views/MultiSelect/Template.cshtml
+++ b/Views/MultiSelect/Template.cshtml
@@ -55,7 +55,9 @@
             padding: 15px 0 0 16px;
         }
 
-        .fluent-dark .header {
+        .fluent-dark .header,
+        .fluent2-dark .header,
+        .fluent2-highcontrast .header {
             background: #252423;
             color: #2899F5;
         }
