--- a/Views/TextArea/DefaultFunctionalities.cshtml
+++ b/Views/TextArea/DefaultFunctionalities.cshtml
@@ -117,7 +117,9 @@
     .bootstrap-dark .row.material,
     .fluent .row.material,
     .fluent-dark .row.material,
-    .fluent2 .row.material {
+	.fluent2 .row.material,
+    .fluent2-dark .row.material,
+    .fluent2-highcontrast .row.material {
         display: none;
     }
 
