--- a/Views/TextBoxes/DefaultFunctionalities.cshtml
+++ b/Views/TextBoxes/DefaultFunctionalities.cshtml
@@ -219,6 +219,8 @@
     .fabric-dark .row.material,
     .bootstrap-dark .row.material,
     .fluent-dark .row.material,
+    .fluent2-dark .row.material,
+    .fluent2-highcontrast .row.material,
     .fluent .row.material {
         display: none;
     }
